add POST to shows and more GET for movies
