# routes/movies.js
@@ -4,6 +4,7 @@ const controller = require('../controllers/movies-controller');
 //get all posts
 router.get("/", controller.getMovies);
 router.get("/:id", controller.getMovieById);
+router.get("/:title", controller.getMovieByTitle);
 
 //All POST requests
 router.post("/", controller.postMovie);
